<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.android.sgvn.gymme.fragments.tabMainFragments.MoreFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_more"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/appBarLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Settings"
            android:background="@drawable/custom_button_color_press"
            android:drawableLeft="@drawable/ic_settings_black_24dp"
            android:drawablePadding="@dimen/button_drawable_padding"
            android:paddingLeft="@dimen/button_padding_left"
            android:gravity="left|center"
            android:text="@string/string_setting"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/btn_Settings"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Account"
            android:background="@drawable/custom_button_color_press"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="@dimen/button_drawable_padding"
            android:paddingLeft="@dimen/button_padding_left"
            android:gravity="left|center"
            android:text="@string/string_account"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/btn_Account"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_Helps"
            android:background="@drawable/custom_button_color_press"
            android:drawableLeft="@drawable/ic_help_outline_black_24dp"
            android:drawablePadding="@dimen/button_drawable_padding"
            android:paddingLeft="@dimen/button_padding_left"
            android:gravity="left|center"
            android:text="@string/string_helps"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/linkToFacebook"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Link me with Facebook"/>

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
