<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="15dp"
    android:weightSum="1"
    tools:context="com.android.sgvn.gymme.fragments.exerciseDetailFragment.ExerciseDetailInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:text="@string/primary_muscle"
                android:textColor="@color/muscle_information"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/primary_muscle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.66"
                android:text="aaa"
                android:textColor="@color/text_color_detail"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_secondary_muscle"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/secondary_muscle"
                android:textColor="@color/muscle_information"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/secondary_muscle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="aaa"
                android:textColor="@color/text_color_detail"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/instructions"
            android:textColor="@color/muscle_information"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.215"
                        android:text="@string/preparation"
                        android:background="@color/text_background"
                        android:textColor="@color/muscle_information" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.785"
                        android:maxLines="6"
                        android:id="@+id/preparation"
                        android:text="asaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                        android:textColor="@color/text_color_detail"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.18"
                        android:text="@string/execution"
                        android:background="@color/text_background"
                        android:textColor="@color/muscle_information" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.72"
                        android:maxLines="6"
                        android:id="@+id/execution"
                        android:text="asaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                        android:textColor="@color/text_color_detail"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>